--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </header>
 </head>
     <body>
-        <script src="assets/script.js"></script>
+        <script src="script.js"></script>
         <section id="results">
             <article id="answers">
                 <span id="cityName"></span>
